# PathPlanningInROS

./: A Jerárquico.docx  README.md  datos_tsi.ods  p1.aux  p1.tex
Entrega/my_astar_planner_2/src/: myAstarPlanner.cpp
PathPlanningInROS/: p1.toc
PathPlanningInROS/Entrega/my_astar_planner/src/: myAstarPlanner.cpp
PathPlanningInROS/Tema 2/Sesión 2/my_turtle/: listen_turtle.cpp
PathPlanningInROS/Tema 2/Sesión 3/codigofuente/: CMakeLists.txt  Stopper.h  move_forward.cpp  publisher.cpp  subscriber.cpp
PathPlanningInROS/catkin_ws/devel/: .rosinstall
Tema 2/Sesión 1/: sesion1.launch
Tema 2/Sesión 2/my_turtle/: move_turtle.cpp
Tema 2/Sesión 3/: launch_gmapping+rviz.launch  launch_gmapping.launch
Tema 2/Sesión 3/codigofuente/: Stopper.cpp
Tema 2/Sesión 3/my_astar_planner/src/: myAstarPlanner.cpp
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/lib/pkgconfig/: laser_scan_publisher_tutorial.pc  my_astar_planner.pc  my_turtle.pc  robot_setup_tf_tutorial.pc
catkin_ws/src/my_astar_planner/src/: myAstarPlanner.cpp
catkin_ws_BACKUP/devel/lib/my_stage/: move_forward  stopper
catkin_ws_BACKUP/src/beginner_tutorials/: package.xml
catkin_ws_BACKUP/src/my_stage/: package.xml
catkin_ws_BACKUP/src/my_stage/include/: Stopper.h
catkin_ws_BACKUP/src/my_stage/launch/: stopper.launch
catkin_ws_BACKUP/src/my_turtle/: CMakeLists.txt  package.xml
catkin_ws_navegacion/devel/: _setup_util.py
catkin_ws_navegacion_BACKUP_2/devel/: .catkin  .rosinstall
catkin_ws_navegacion_BACKUP_ULTIMO/devel/: setup.sh
(+18 files in other folders)
